...
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D4V-mX-uMb">
                                        <rect key="frame" x="207.5" y="5" width="103" height="30"/>
                                        <color key="backgroundColor" red="0.97636479139999999" green="0.97653168440000004" blue="0.9763541818" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                        <state key="normal" title="Paste"/>
                                        <connections>
                                            <action selector="btnPasteDidTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ycP-bl-4w7"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LVB-gA-c0R">
                                        <rect key="frame" x="311" y="5" width="103" height="30"/>
...
                    <navigationItem key="navigationItem" id="m3p-Yg-42a">
                        <barButtonItem key="leftBarButtonItem" title="Cards Game" id="YsF-Hq-LbL">
                            <connections>
                                <action selector="btnCardsDidTap:" destination="BYZ-38-t0r" id="2vR-vm-9h3"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Settings" id="Tqd-pk-gZM">
                            <connections>
                                <action selector="btnSettingsDidTap:" destination="BYZ-38-t0r" id="8QW-Oo-Uvs"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
